# django-research-vocabs

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  README.md  manage.py  package-lock.json  pyproject.toml  requirements.txt  tasks.py  test.py
.github/workflows/: docs.yml  on-release-main.yml
docs/: conf.py  contributing.md  features.md  finding_vocabularies.md  index.md  index.rst  installation.md  installation.rst  modules.rst  readme.md  skos_primer.md  usage.rst
docs/apidocs/: index.rst
docs/apidocs/research_vocabs/: research_vocabs.apps.md  research_vocabs.concepts.md  research_vocabs.fields.md  research_vocabs.forms.md  research_vocabs.md  research_vocabs.models.md
docs/usage/: concept_field.md  index.md  taggable_concepts.md
example/: admin.py  forms.py  models.py  test.py  urls.py  views.py
example/migrations/: 0001_initial.py
example/templates/: base.html
example/templates/neapolitan/: base_form.html
example/templates/neapolitan/partial/: detail.html  list.html
research_vocabs/: __init__.py  admin.py  apps.py  bases.py  concepts.py  core.py  fields.py  forms.py  managers.py  models.py  options.py  registry.py  urls.py  utils.py  views.py  vocabularies.py
research_vocabs/builder/: skos.py
research_vocabs/migrations/: 0001_initial.py  0002_alter_concept_unique_together.py
research_vocabs/templates/research_vocabs/: base.html  concept.html  list_item.html  sidebar.html  term_detail.html  tree.html  vocabulary_detail.html  vocabulary_list.html
research_vocabs/templates/research_vocabs/partials/: concept.html  concept_list.html  def_list.html  list.html  table.html  table_row.html  uri.html  value.html
research_vocabs/templatetags/: vocabularies.py
tests/: README.md  settings.py  test_concepts.py  test_core.py  test_fields.py  test_forms.py  test_models.py  test_registry.py  test_urls.py  test_utils.py  test_views.py  test_vocabularies.py  urls.py
tests/example/: admin.py  apps.py  choices.py  forms.py  models.py  test.py  urls.py  views.py  vocabularies.py
tests/example/locale/de/LC_MESSAGES/: django.mo  django.po
tests/example/templates/: base.html  test_form.html
tests/example/templates/example/: examplemodel_detail.html
tests/example/templates/neapolitan/: object_confirm_delete.html  object_detail.html  object_form.html
tests/example/vocab_data/: drillingmethod.nt  simple_lithology.ttl
tests/vocab_data/: test.ttl
